<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="1"
    tools:context="com.hokuten.wikipicstrivia.FragmentCreateBrowsable">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/createmode_browsable"
        android:textSize="@dimen/menu_stat_text"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center">
        <ToggleButton
            android:id="@+id/tglBtnBrowsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/common_yes"
            android:textOff="@string/common_no" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

</LinearLayout>