<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="1"
    tools:context="com.hokuten.wikipicstrivia.FragmentCreateCategory">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:layout_weight=".9" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/createmode_category"
                android:textSize="@dimen/menu_stat_text"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/rGrpSelect"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/rBtnAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/menu_button_horizontal_pad"
                        android:text="@string/createmode_select_all"
                        android:textSize="@dimen/menu_stat_text"/>
                    <RadioButton
                        android:id="@+id/rBtnNone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/menu_button_horizontal_pad"
                        android:text="@string/createmode_select_none"
                        android:textSize="@dimen/menu_stat_text"/>

                    <RadioButton
                        android:id="@+id/rBtnCustom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/menu_button_horizontal_pad"
                        android:text="@string/createmode_select_custom"
                        android:textSize="@dimen/menu_stat_text"/>

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/mode_option_pad"
                android:gravity="center">
                <ExpandableListView
                    android:id="@+id/elvCategories"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateModeDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:layout_gravity="bottom|right"
        android:gravity="bottom|right"
        android:text="@string/createmode_category_done"
        android:textSize="@dimen/menu_button_text"
        android:textColor="@color/button"
        android:background="@android:color/transparent"
        android:soundEffectsEnabled="false" />

</LinearLayout>