<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="1"
    tools:context="com.hokuten.wikipicstrivia.FragmentCreateName">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/createmode_description"
            android:textSize="@dimen/menu_label_text"
            android:background="@android:color/transparent" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/createmode_name"
            android:textSize="@dimen/menu_stat_text"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTxtName"
            android:hint="@string/createmode_name_hint"
            android:gravity="center"
            android:singleLine="true"/>
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

</LinearLayout>