<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="1"
    tools:context="com.hokuten.wikipicstrivia.FragmentCreateTimer">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/createmode_timer"
            android:textSize="@dimen/menu_stat_text"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/createmode_timer_note"
            android:textSize="@dimen/menu_desc_text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center">
        <NumberPicker
            android:id="@+id/pckrTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTimePerQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/createmode_timer_helper"
        android:textSize="@dimen/menu_desc_text"/>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

</LinearLayout>